--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -24,6 +24,7 @@ $bp-medium: 52.8125em; //845px
 $bp-small: 43.75em; //700px
 $bp-smallest: 37.5em; //600px
 
+$bp-popup-break: 34.375em; //550px
 $bp-art-break: 28.125em; //450px
 $bp-client-break: 25em; //400px
 $bp-service-break-large: 28.125em; //450px
