--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,29 +11,7 @@ html {
   font-size: 62.5%; //1 rem = 10px
   scroll-behavior: smooth;
 
-  // Scrollbar ---
-  overflow-y: scroll;
-
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /*Firefox*/
-
-  /*Firefox*/
-  scrollbar-width: thin;
-  scrollbar-color: $color-tertiary $color-primary;
-
-  /* Chrome, Edge, and Safari */
-  &::-webkit-scrollbar {
-    width: 0.55vw;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: $color-primary;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: $color-tertiary;
-  }
-  // --- Scrollbar
+  @include scrollTemplate();
 
   @media only screen and (max-width: $bp-largest) {
     font-size: 50%;
