--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -152,7 +152,7 @@
     }
   }
 
-  &--small {
+  &__small {
     align-items: center;
     position: fixed;
     top: -5.5rem;
